--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings":{"DefaultConnection": "Server=127.0.0.1; Port=3306; uid=uid; pwd=pwd; Database=punch_card_system; CharSet=utf8; TreatTinyAsBoolean:false;"},
+  "ConnectionStrings":{"DefaultConnection": "Server=127.0.0.1; Port=3306; uid=uid; pwd=pwd; Database=punch_card_system; CharSet=utf8; TreatTinyAsBoolean=false;"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
