可申請加班，半小時為最小單位 若核准加班，該時數化為補休時數 請假新增補休(扣補休時數) 把預設帳號密碼移到appsetting.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings":{"DefaultConnection": "Server=127.0.0.1; Port=3306; uid=uid; pwd=pwd; Database=punch_card_system; CharSet=utf8; TreatTinyAsBoolean=false;"},
+  "ConnectionStrings":{"DefaultConnection": "Server=127.0.0.1; Port=3306; uid=root; pwd=; Database=punch_card_system; CharSet=utf8; TreatTinyAsBoolean=false;"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,5 +7,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefDbAccData":{
+    "defUid": "DIMA",
+    "defPwd": "DIMA"
+  }
 }
